@@ -29,11 +29,10 @@ setup(
     zip_safe=False,
     install_requires=[
         'setuptools',
+        'Plone >= 4.0',
     ],
     entry_points="""
     [z3c.autoinclude.plugin]
     target = plone
     """,
-    setup_requires=["PasteScript"],
-    paster_plugins=["ZopeSkel"],
     )
