@@ -4,7 +4,9 @@ Changelog
 2.2 (not yet released)
 ----------------------
 
-- fixed default notification templates to have them work in Plone 4.
+- updated tests for Plone 4 [dbaty]
+
+- fixed default notification templates to have them work in Plone 4 [dbaty]
 
 
 2.2a1 (2010-04-21)
